app/ACMulticapaParser.py
# Generated from ANTLR/ACMulticapa.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ACMulticapaParser ( Parser ):

    grammarFileName = "ACMulticapa.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'CAPA'", "'{'", "'}'", "'CELDA'", "'('", 
                     "')'", "';'", "'VECINDAD'", "','", "'SUSCEPTIBLE'", 
                     "'INFECTADO'", "'RECUPERADO'", "'REGLA'", "'->'", "'SI'", 
                     "'EN'", "'SIMULACION'", "'PASO'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "WS" ]

    RULE_program = 0
    RULE_layer = 1
    RULE_cell = 2
    RULE_vecindad = 3
    RULE_cellRef = 4
    RULE_cellState = 5
    RULE_transitionRule = 6
    RULE_condition = 7
    RULE_simulation = 8
    RULE_step = 9
    RULE_cellAction = 10

    ruleNames =  [ "program", "layer", "cell", "vecindad", "cellRef", "cellState", 
                   "transitionRule", "condition", "simulation", "step", 
                   "cellAction" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    ID=19
    WS=20

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simulation(self):
            return self.getTypedRuleContext(ACMulticapaParser.SimulationContext,0)


        def EOF(self):
            return self.getToken(ACMulticapaParser.EOF, 0)

        def layer(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ACMulticapaParser.LayerContext)
            else:
                return self.getTypedRuleContext(ACMulticapaParser.LayerContext,i)


        def transitionRule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ACMulticapaParser.TransitionRuleContext)
            else:
                return self.getTypedRuleContext(ACMulticapaParser.TransitionRuleContext,i)


        def getRuleIndex(self):
            return ACMulticapaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ACMulticapaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 22
                self.layer()
                self.state = 25 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

            self.state = 28 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 27
                self.transitionRule()
                self.state = 30 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==13):
                    break

            self.state = 32
            self.simulation()
            self.state = 33
            self.match(ACMulticapaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LayerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ACMulticapaParser.ID, 0)

        def cell(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ACMulticapaParser.CellContext)
            else:
                return self.getTypedRuleContext(ACMulticapaParser.CellContext,i)


        def getRuleIndex(self):
            return ACMulticapaParser.RULE_layer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLayer" ):
                listener.enterLayer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLayer" ):
                listener.exitLayer(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLayer" ):
                return visitor.visitLayer(self)
            else:
                return visitor.visitChildren(self)




    def layer(self):

        localctx = ACMulticapaParser.LayerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_layer)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.match(ACMulticapaParser.T__0)
            self.state = 36
            self.match(ACMulticapaParser.ID)
            self.state = 37
            self.match(ACMulticapaParser.T__1)
            self.state = 39 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 38
                self.cell()
                self.state = 41 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==4):
                    break

            self.state = 43
            self.match(ACMulticapaParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CellContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ACMulticapaParser.ID, 0)

        def cellState(self):
            return self.getTypedRuleContext(ACMulticapaParser.CellStateContext,0)


        def vecindad(self):
            return self.getTypedRuleContext(ACMulticapaParser.VecindadContext,0)


        def getRuleIndex(self):
            return ACMulticapaParser.RULE_cell

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCell" ):
                listener.enterCell(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCell" ):
                listener.exitCell(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCell" ):
                return visitor.visitCell(self)
            else:
                return visitor.visitChildren(self)




    def cell(self):

        localctx = ACMulticapaParser.CellContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_cell)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(ACMulticapaParser.T__3)
            self.state = 46
            self.match(ACMulticapaParser.ID)
            self.state = 47
            self.match(ACMulticapaParser.T__4)
            self.state = 48
            self.cellState()
            self.state = 49
            self.match(ACMulticapaParser.T__5)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 50
                self.vecindad()


            self.state = 53
            self.match(ACMulticapaParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VecindadContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cellRef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ACMulticapaParser.CellRefContext)
            else:
                return self.getTypedRuleContext(ACMulticapaParser.CellRefContext,i)


        def getRuleIndex(self):
            return ACMulticapaParser.RULE_vecindad

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVecindad" ):
                listener.enterVecindad(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVecindad" ):
                listener.exitVecindad(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVecindad" ):
                return visitor.visitVecindad(self)
            else:
                return visitor.visitChildren(self)




    def vecindad(self):

        localctx = ACMulticapaParser.VecindadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vecindad)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(ACMulticapaParser.T__7)
            self.state = 56
            self.match(ACMulticapaParser.T__1)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 57
                self.cellRef()
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==9:
                    self.state = 58
                    self.match(ACMulticapaParser.T__8)
                    self.state = 59
                    self.cellRef()
                    self.state = 64
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 67
            self.match(ACMulticapaParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CellRefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ACMulticapaParser.ID, 0)

        def getRuleIndex(self):
            return ACMulticapaParser.RULE_cellRef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCellRef" ):
                listener.enterCellRef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCellRef" ):
                listener.exitCellRef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCellRef" ):
                return visitor.visitCellRef(self)
            else:
                return visitor.visitChildren(self)




    def cellRef(self):

        localctx = ACMulticapaParser.CellRefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_cellRef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(ACMulticapaParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CellStateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ACMulticapaParser.RULE_cellState

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCellState" ):
                listener.enterCellState(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCellState" ):
                listener.exitCellState(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCellState" ):
                return visitor.visitCellState(self)
            else:
                return visitor.visitChildren(self)




    def cellState(self):

        localctx = ACMulticapaParser.CellStateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_cellState)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7168) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TransitionRuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cellState(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ACMulticapaParser.CellStateContext)
            else:
                return self.getTypedRuleContext(ACMulticapaParser.CellStateContext,i)


        def condition(self):
            return self.getTypedRuleContext(ACMulticapaParser.ConditionContext,0)


        def getRuleIndex(self):
            return ACMulticapaParser.RULE_transitionRule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTransitionRule" ):
                listener.enterTransitionRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTransitionRule" ):
                listener.exitTransitionRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTransitionRule" ):
                return visitor.visitTransitionRule(self)
            else:
                return visitor.visitChildren(self)




    def transitionRule(self):

        localctx = ACMulticapaParser.TransitionRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_transitionRule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(ACMulticapaParser.T__12)
            self.state = 74
            self.cellState()
            self.state = 75
            self.match(ACMulticapaParser.T__13)
            self.state = 76
            self.cellState()
            self.state = 77
            self.match(ACMulticapaParser.T__14)
            self.state = 78
            self.condition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cellState(self):
            return self.getTypedRuleContext(ACMulticapaParser.CellStateContext,0)


        def cellRef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ACMulticapaParser.CellRefContext)
            else:
                return self.getTypedRuleContext(ACMulticapaParser.CellRefContext,i)


        def getRuleIndex(self):
            return ACMulticapaParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = ACMulticapaParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.cellState()
            self.state = 81
            self.match(ACMulticapaParser.T__15)
            self.state = 82
            self.match(ACMulticapaParser.T__1)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 83
                self.cellRef()
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==9:
                    self.state = 84
                    self.match(ACMulticapaParser.T__8)
                    self.state = 85
                    self.cellRef()
                    self.state = 90
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 93
            self.match(ACMulticapaParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimulationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def step(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ACMulticapaParser.StepContext)
            else:
                return self.getTypedRuleContext(ACMulticapaParser.StepContext,i)


        def getRuleIndex(self):
            return ACMulticapaParser.RULE_simulation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimulation" ):
                listener.enterSimulation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimulation" ):
                listener.exitSimulation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimulation" ):
                return visitor.visitSimulation(self)
            else:
                return visitor.visitChildren(self)




    def simulation(self):

        localctx = ACMulticapaParser.SimulationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_simulation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(ACMulticapaParser.T__16)
            self.state = 96
            self.match(ACMulticapaParser.T__1)
            self.state = 98 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 97
                self.step()
                self.state = 100 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==18):
                    break

            self.state = 102
            self.match(ACMulticapaParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StepContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cellAction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ACMulticapaParser.CellActionContext)
            else:
                return self.getTypedRuleContext(ACMulticapaParser.CellActionContext,i)


        def getRuleIndex(self):
            return ACMulticapaParser.RULE_step

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStep" ):
                listener.enterStep(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStep" ):
                listener.exitStep(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStep" ):
                return visitor.visitStep(self)
            else:
                return visitor.visitChildren(self)




    def step(self):

        localctx = ACMulticapaParser.StepContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_step)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(ACMulticapaParser.T__17)
            self.state = 105
            self.match(ACMulticapaParser.T__1)
            self.state = 107 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 106
                self.cellAction()
                self.state = 109 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==19):
                    break

            self.state = 111
            self.match(ACMulticapaParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CellActionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cellRef(self):
            return self.getTypedRuleContext(ACMulticapaParser.CellRefContext,0)


        def cellState(self):
            return self.getTypedRuleContext(ACMulticapaParser.CellStateContext,0)


        def getRuleIndex(self):
            return ACMulticapaParser.RULE_cellAction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCellAction" ):
                listener.enterCellAction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCellAction" ):
                listener.exitCellAction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCellAction" ):
                return visitor.visitCellAction(self)
            else:
                return visitor.visitChildren(self)




    def cellAction(self):

        localctx = ACMulticapaParser.CellActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_cellAction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.cellRef()
            self.state = 114
            self.match(ACMulticapaParser.T__13)
            self.state = 115
            self.cellState()
            self.state = 116
            self.match(ACMulticapaParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





